Changement template site node

--- a/site-node.conf
+++ b/site-node.conf
@@ -1,16 +1,16 @@
-<VirtualHost {{domain}}:80>
-    ServerName {{domain}}
-    ServerAlias www.{{domain}}
+<VirtualHost {{DOMAIN}}:80>
+    ServerName {{DOMAIN}}
+    ServerAlias www.{{DOMAIN}}
     
-    DocumentRoot {{path}}
+    DocumentRoot {{PATH}}
 
     ProxyRequests Off
     ProxyPreserveHost On
 
-    ProxyPass / http://localhost:{{port}}/
-    ProxyPassReverse / http://localhost:{{port}}/
+    ProxyPass / http://localhost:{{PORT}}/
+    ProxyPassReverse / http://localhost:{{PORT}}/
 
-    ErrorLog {{path}}/error.log
+    ErrorLog {{PATH}}/error.log
     LogLevel warn
-    CustomLog {{path}}/access.log combined
+    CustomLog {{PATH}}/access.log combined
 </VirtualHost>
