--- a/site-node.conf
+++ b/site-node.conf
@@ -1,16 +1,16 @@
-<VirtualHost {{DOMAIN}}:80>
-    ServerName {{DOMAIN}}
-    ServerAlias www.{{DOMAIN}}
+<VirtualHost DOMAIN:80>
+    ServerName DOMAIN
+    ServerAlias www.DOMAIN
     
-    DocumentRoot {{PATH}}
+    DocumentRoot PATH
 
     ProxyRequests Off
     ProxyPreserveHost On
 
-    ProxyPass / http://localhost:{{PORT}}/
-    ProxyPassReverse / http://localhost:{{PORT}}/
+    ProxyPass / http://localhost:PORT/
+    ProxyPassReverse / http://localhost:PORT/
 
-    ErrorLog {{PATH}}/error.log
+    ErrorLog PATH/error.log
     LogLevel warn
-    CustomLog {{PATH}}/access.log combined
+    CustomLog PATH/access.log combined
 </VirtualHost>
